--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Audio/Music/Cues
+ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes/Window
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -220,26 +220,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Audio/SFX/Cues/SFX_Bubbles_Loop_Cue
-MRUItem1=/Game/Audio/SFX/Cues/SFX_Footsteps_Water_1_Cue
-MRUItem2=/Game/Audio/SFX/Cues/SFX_Footsteps_Grass_1_Cue
-MRUItem3=/Game/Audio/SFX/Cues/SFX_Footsteps_Stone_1_Cue
-MRUItem4=/Game/Audio/SFX/Cues/SFX_Footstep_Sand_1_Cue
-MRUItem5=/Game/Audio/SFX/Cues/SFX_Book_Cover_Close_Cue
-MRUItem6=/Game/Audio/SFX/Cues/SFX_Bubbles_Cue
-MRUItem7=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem8=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem9=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY_Sprite
-MRUItem10=/Game/Blueprints/UI/Tkey_Sprite
-MRUItem11=/Game/Blueprints/UI/Tkey
-MRUItem12=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY
-MRUItem13=/Game/Gnome_Animated/FallGnome/Fall_Gnome
-MRUItem14=/Game/Blueprints/NewPlayerController
-MRUItem15=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem16=/Game/Levels/Sewer_Ground_WATER__1_
-MRUItem17=/Game/Sewer/SewerTrack
-MRUItem18=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem19=/Game/Levels/Sewer_Ground_WATER__1__Blueprint
+MRUItem0=/Game/Geometry/Meshes/Window/Glass
+MRUItem1=/Game/Geometry/Meshes/Window/Window
+MRUItem2=/Game/Audio/SFX/Cues/SFX_Bubbles_Loop_Cue
+MRUItem3=/Game/Audio/SFX/Cues/SFX_Footsteps_Water_1_Cue
+MRUItem4=/Game/Audio/SFX/Cues/SFX_Footsteps_Grass_1_Cue
+MRUItem5=/Game/Audio/SFX/Cues/SFX_Footsteps_Stone_1_Cue
+MRUItem6=/Game/Audio/SFX/Cues/SFX_Footstep_Sand_1_Cue
+MRUItem7=/Game/Audio/SFX/Cues/SFX_Book_Cover_Close_Cue
+MRUItem8=/Game/Audio/SFX/Cues/SFX_Bubbles_Cue
+MRUItem9=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem10=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem11=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY_Sprite
+MRUItem12=/Game/Blueprints/UI/Tkey_Sprite
+MRUItem13=/Game/Blueprints/UI/Tkey
+MRUItem14=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY
+MRUItem15=/Game/Gnome_Animated/FallGnome/Fall_Gnome
+MRUItem16=/Game/Blueprints/NewPlayerController
+MRUItem17=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem18=/Game/Levels/Sewer_Ground_WATER__1_
+MRUItem19=/Game/Sewer/SewerTrack
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3177,6 +3177,8 @@ None=======
 /Game/Audio/SFX/Cues/SFX_Book_Cover_Close_Cue.SFX_Book_Cover_Close_Cue=1
 /Game/Audio/SFX/Cues/SFX_Footsteps_Water_1_Cue.SFX_Footsteps_Water_1_Cue=1
 /Game/Audio/SFX/Cues/SFX_Bubbles_Loop_Cue.SFX_Bubbles_Loop_Cue=1
+/Game/Geometry/Meshes/Window/Glass.Glass=1
+/Game/Geometry/Meshes/Window/Window.Window=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
