--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes/Window
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -176,7 +176,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.196429
+ContentBrowserTab1.ThumbnailSizeScale=0.000000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -207,7 +207,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/PersistentLevel
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -220,26 +220,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/Meshes/Window/Glass
-MRUItem1=/Game/Geometry/Meshes/Window/Window
-MRUItem2=/Game/Audio/SFX/Cues/SFX_Bubbles_Loop_Cue
-MRUItem3=/Game/Audio/SFX/Cues/SFX_Footsteps_Water_1_Cue
-MRUItem4=/Game/Audio/SFX/Cues/SFX_Footsteps_Grass_1_Cue
-MRUItem5=/Game/Audio/SFX/Cues/SFX_Footsteps_Stone_1_Cue
-MRUItem6=/Game/Audio/SFX/Cues/SFX_Footstep_Sand_1_Cue
-MRUItem7=/Game/Audio/SFX/Cues/SFX_Book_Cover_Close_Cue
-MRUItem8=/Game/Audio/SFX/Cues/SFX_Bubbles_Cue
-MRUItem9=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem10=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem11=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY_Sprite
-MRUItem12=/Game/Blueprints/UI/Tkey_Sprite
-MRUItem13=/Game/Blueprints/UI/Tkey
-MRUItem14=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY
-MRUItem15=/Game/Gnome_Animated/FallGnome/Fall_Gnome
-MRUItem16=/Game/Blueprints/NewPlayerController
-MRUItem17=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem18=/Game/Levels/Sewer_Ground_WATER__1_
-MRUItem19=/Game/Sewer/SewerTrack
+MRUItem0=/Game/Geometry/Meshes/SMIsland/SM_Island4_1_L
+MRUItem1=/Game/ToyBoat/ToyBoatYellow
+MRUItem2=/Game/BubStair
+MRUItem3=/Game/Bathtub/mesh/BathtubBuilding
+MRUItem4=/Game/MerryGoRound/MGR
+MRUItem5=/Game/Swing/Swing_LP
+MRUItem6=/Game/Geometry/Meshes/MonkeyBars/MonkeyBars
+MRUItem7=/Game/BubbleTurbine/BubbleTurbine
+MRUItem8=/Game/Bubble_Garland/Bubble_Garland_Combined
+MRUItem9=/Game/SoapFountain/SoapFountain
+MRUItem10=/Game/BubbleTrash/BubbleTrash
+MRUItem11=/Game/Bench_Bubble/bench_Low_Bubbleopolis
+MRUItem12=/Game/Bubble_Bridge/Bubble_Stone_Bridge_LP
+MRUItem13=/Game/Bubble_Tree/Bubble_Tree_LP
+MRUItem14=/Game/Levels/Bubbleopolis
+MRUItem15=/Game/Geometry/Meshes/Window/Glass
+MRUItem16=/Game/Geometry/Meshes/Window/Window
+MRUItem17=/Game/Audio/SFX/Cues/SFX_Bubbles_Loop_Cue
+MRUItem18=/Game/Audio/SFX/Cues/SFX_Footsteps_Water_1_Cue
+MRUItem19=/Game/Audio/SFX/Cues/SFX_Footsteps_Grass_1_Cue
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3179,6 +3179,13 @@ None=======
 /Game/Audio/SFX/Cues/SFX_Bubbles_Loop_Cue.SFX_Bubbles_Loop_Cue=1
 /Game/Geometry/Meshes/Window/Glass.Glass=1
 /Game/Geometry/Meshes/Window/Window.Window=1
+/Game/Bench_Bubble/bench_Low_Bubbleopolis.bench_Low_Bubbleopolis=1
+/Game/BubbleTrash/BubbleTrash.BubbleTrash=1
+/Game/SoapFountain/SoapFountain.SoapFountain=1
+/Game/BubbleTurbine/BubbleTurbine.BubbleTurbine=1
+/Game/Swing/Swing_LP.Swing_LP=1
+/Game/Bathtub/mesh/BathtubBuilding.BathtubBuilding=1
+/Game/Geometry/Meshes/SMIsland/SM_Island4_1_L.SM_Island4_1_L=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3244,9 +3251,9 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=82.000 Y=150.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1470.000 Y=834.000
+WindowSize=X=1475.000 Y=839.000
 None=======
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3263,7 +3270,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=D:/Unreal Projects/Serotopia/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4832,11 +4839,11 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/PersistentLevel
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/NewSewer
-MRUItem4=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/PersistentLevel
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Levels/NewSewer
 MRUItem5=/Game/Levels/ForestBackup
 MRUItem6=/Game/Levels/Sewer
 MRUItem7=/Game/Levels/testYellow
@@ -5163,7 +5170,7 @@ NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Inpu
 SteamVREditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
+SceneComponent=
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
 CapsuleComponent=
 SkeletalMeshComponent=
@@ -5172,7 +5179,7 @@ InstancedFoliageActor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCom
 PinkPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SkeletalMesh=
 BrushComponent=
-Skybox_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
+Skybox_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
 SceneFinish_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 StaticMesh=StaticMesh.ImportSettings.File Path,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Mesh,
@@ -5237,7 +5244,7 @@ Winter_Gnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.
 Mush_Gnome_C=
 Mush4_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 Music_BG_Actor_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-MusicBP_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+MusicBP_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
 Bubbleopolis_C=
 Fall_Gnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 LoadingScreen_C=
