--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/BookCase
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -207,7 +207,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/PersistentLevel
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -218,29 +218,28 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water.MM_Sewer_Water
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water
-MRUItem2=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor
-MRUItem3=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
-MRUItem4=/Game/Sewer/Sewer_Level_Sewer_BOTTOM_MESH
-MRUItem5=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst
-MRUItem6=/Game/Sewer/Sewer_textures/MM_Sewer_Wall
-MRUItem7=/Game/Levels/NewSewer
-MRUItem8=/Game/Bathtub/Materials/BT_Main
-MRUItem9=/Game/Bathtub/Materials/BT_Silver
-MRUItem10=/Game/Bathtub/Materials/BT_Tap
-MRUItem11=/Game/Bathtub/Materials/BT_Stairs
-MRUItem12=/Game/Bubbleopolis/Current/Materials/M_Walls_Bubble_Castle
-MRUItem13=/Game/Bubbleopolis/Current/Materials/M_Walls_Bubble_Castle_Inst
-MRUItem14=/Game/Bubbleopolis/Current/Materials/M_Walls_Bubble_Posts_Instance
-MRUItem15=/Game/Bubbleopolis/Current/Materials/walls
-MRUItem16=/Game/Bubbleopolis/NewFolder/Bubble_brick_texture_01_Mat_Inst
-MRUItem17=/Game/Bubbleopolis/NewFolder/Bubble_brick_texture_01_Mat
-MRUItem18=/Game/Bubble_Gate/lambert1
-MRUItem19=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Chandelier/Chandelier_Mat
+MRUItem1=/Game/Chandelier/Chandelier
+MRUItem2=/Game/Chest/Treasure_Chest_Mat
+MRUItem3=/Game/Chest/TreasureChest
+MRUItem4=/Game/Shield/Shield1
+MRUItem5=/Game/Shield/Sword_Mat
+MRUItem6=/Game/Shield/Sword
+MRUItem7=/Game/Dresser/Dresser
+MRUItem8=/Game/Dresser/Dresser_PhysicsAsset
+MRUItem9=/Game/BookCase/M_Bookshelf_Top_Pieces
+MRUItem10=/Game/BookCase/Bookcase
+MRUItem11=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water
+MRUItem12=/Game/Levels/Forest
+MRUItem13=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor
+MRUItem14=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
+MRUItem15=/Game/Sewer/Sewer_Level_Sewer_BOTTOM_MESH
+MRUItem16=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst
+MRUItem17=/Game/Sewer/Sewer_textures/MM_Sewer_Wall
+MRUItem18=/Game/Levels/NewSewer
+MRUItem19=/Game/Bathtub/Materials/BT_Main
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2798,8 +2797,8 @@ PaperSprite="\"Object.Sprite.SourceUV\" "
 SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 SoundBase="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
-MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression="\"Object.DefaultValue\" "
+MaterialExpressionParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
+MaterialExpression=
 MaterialEditorInstanceConstant=
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 
@@ -3216,6 +3215,14 @@ None=======
 /Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall.MM_Sewer_Wall=1
 /Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water.MM_Sewer_Water=1
 /Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor.MM_Sewer_Floor=1
+/Game/Dresser/Dresser_PhysicsAsset.Dresser_PhysicsAsset=1
+/Game/Shield/Sword.Sword=1
+/Game/Sword/Sword_Mat.Sword_Mat=1
+/Game/Shield/Shield1.Shield1=1
+/Game/Chest/Treasure_Chest_Mat.Treasure_Chest_Mat=1
+/Game/Chest/TreasureChest.TreasureChest=1
+/Game/Chandelier/Chandelier.Chandelier=1
+/Game/Chandelier/Chandelier_Mat.Chandelier_Mat=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -4855,8 +4862,8 @@ PinnedCommandList.TimeStamp=2021.02.11-02.29.30
 PinnedCommandList.LastCompileMethod=External
 AnimationEditor.TimeStamp=2021.02.09-23.59.10
 AnimationEditor.LastCompileMethod=Unknown
-PhysicsAssetEditor.TimeStamp=2021.02.09-23.59.31
-PhysicsAssetEditor.LastCompileMethod=Unknown
+PhysicsAssetEditor.TimeStamp=2021.02.11-02.29.30
+PhysicsAssetEditor.LastCompileMethod=External
 LauncherServices.TimeStamp=2021.02.05-04.34.16
 LauncherServices.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2021.02.05-04.34.23
@@ -4884,7 +4891,7 @@ MRUItem11=/Game/Levels/testMagenta
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=PIE
+LastLogListing=FBXImport
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
