--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,7 +136,6 @@ CurrentPosGridSize=1
 CurrentRotGridSize=0
 CurrentScalingGridSize=1
 SnapScaleEnabled=False
-GridEnabled=False
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -154,7 +153,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/BookCase
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -176,7 +175,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.232143
+ContentBrowserTab1.ThumbnailSizeScale=0.000000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -207,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/PersistentLevel
+LastLevel=/Game/Levels/NewSewer
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -218,28 +217,29 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Sewer/gatee.gatee
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Chandelier/Chandelier_Mat
-MRUItem1=/Game/Chandelier/Chandelier
-MRUItem2=/Game/Chest/Treasure_Chest_Mat
-MRUItem3=/Game/Chest/TreasureChest
-MRUItem4=/Game/Shield/Shield1
-MRUItem5=/Game/Shield/Sword_Mat
-MRUItem6=/Game/Shield/Sword
-MRUItem7=/Game/Dresser/Dresser
-MRUItem8=/Game/Dresser/Dresser_PhysicsAsset
-MRUItem9=/Game/BookCase/M_Bookshelf_Top_Pieces
-MRUItem10=/Game/BookCase/Bookcase
-MRUItem11=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water
-MRUItem12=/Game/Levels/Forest
-MRUItem13=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor
-MRUItem14=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
-MRUItem15=/Game/Sewer/Sewer_Level_Sewer_BOTTOM_MESH
-MRUItem16=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst
-MRUItem17=/Game/Sewer/Sewer_textures/MM_Sewer_Wall
-MRUItem18=/Game/Levels/NewSewer
-MRUItem19=/Game/Bathtub/Materials/BT_Main
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/Sewer/gatee
+MRUItem2=/Game/Gates/Gate
+MRUItem3=/Game/Sewer/Lever
+MRUItem4=/Game/Chandelier/Chandelier_Mat
+MRUItem5=/Game/Chandelier/Chandelier
+MRUItem6=/Game/Chest/Treasure_Chest_Mat
+MRUItem7=/Game/Chest/TreasureChest
+MRUItem8=/Game/Shield/Shield1
+MRUItem9=/Game/Shield/Sword_Mat
+MRUItem10=/Game/Shield/Sword
+MRUItem11=/Game/Dresser/Dresser
+MRUItem12=/Game/Dresser/Dresser_PhysicsAsset
+MRUItem13=/Game/BookCase/M_Bookshelf_Top_Pieces
+MRUItem14=/Game/BookCase/Bookcase
+MRUItem15=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water
+MRUItem16=/Game/Levels/Forest
+MRUItem17=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor
+MRUItem18=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
+MRUItem19=/Game/Sewer/Sewer_Level_Sewer_BOTTOM_MESH
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -650,7 +650,7 @@ StaticMesh.StaticMesh=True
 StaticMesh.Collision=True
 StaticMesh.ImportSettings=False
 StaticMesh.Navigation=False
-StaticMeshActor.TransformCommon=False
+StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=True
@@ -2663,6 +2663,18 @@ PaperSprite.Rendering=True
 NewPlayerController_C.Default=True
 MaterialExpressionConstant4Vector.MaterialExpressionConstant4Vector=True
 MaterialExpressionConstant4Vector.MaterialExpression=True
+NewSewer_C.Tick=True
+NewSewer_C.Replication=True
+NewSewer_C.Actor=True
+NewSewer_C.Input=True
+Gate_C.Tick=True
+Gate_C.Default=True
+Gate_C.Replication=True
+Gate_C.Rendering=True
+Gate_C.Collision=True
+Gate_C.Actor=True
+Gate_C.Input=True
+gatee_C.Tick=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -2716,7 +2728,7 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent=
 ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2801,6 +2813,7 @@ MaterialExpressionParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
 MaterialExpression=
 MaterialEditorInstanceConstant=
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
+NewSewer_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3223,6 +3236,8 @@ None=======
 /Game/Chest/TreasureChest.TreasureChest=1
 /Game/Chandelier/Chandelier.Chandelier=1
 /Game/Chandelier/Chandelier_Mat.Chandelier_Mat=1
+/Game/Sewer/Lever.Lever=1
+/Game/Gates/Gate.Gate=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3288,7 +3303,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=310.000 Y=0.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1480.000 Y=844.000
+WindowSize=X=1490.000 Y=854.000
 None=======
 InitiallyMaximized=True
 
@@ -3307,7 +3322,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=C:/Users/Tay/Desktop/Sero_Git_/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4876,8 +4891,8 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/Levels/Forest
 MRUItem2=/Game/Levels/Bubbleopolis
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/PersistentLevel
@@ -4891,7 +4906,7 @@ MRUItem11=/Game/Levels/testMagenta
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=FBXImport
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5229,7 +5244,7 @@ AO1E_C=
 disappear_cube_blueprint_C=
 AOE_Magenta_C=
 AOE_Decal_C=
-K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 MySaveGame_C=
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
@@ -5296,8 +5311,18 @@ StaircaseBP_C=Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
 DisappearBridge1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 DisappearBridge_C=
 RedPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+gatee_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+NewSewer_C=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Levers/BaseLever.BaseLever;
+RecentlyPlaced=/Game/Levers/UniqueSwitch3.UniqueSwitch3;
+RecentlyPlaced=/Game/Levers/UniqueSwitch2.UniqueSwitch2;
+RecentlyPlaced=/Game/Levers/UniqueSwitch1.UniqueSwitch1;
+RecentlyPlaced=/Game/Levers/M_Base_Lever.M_Base_Lever;
+RecentlyPlaced=/Game/Levers/M_UniqueSwitch3LEver.M_UniqueSwitch3LEver;
+RecentlyPlaced=/Game/Levers/M_UniqueSwitch2Levers.M_UniqueSwitch2Levers;
+RecentlyPlaced=/Game/Levers/M_UniqueSwitch1Lever.M_UniqueSwitch1Lever;
 RecentlyPlaced=/Game/Rocks/rock3/rock3_retopMovable.rock3_retopMovable;
 RecentlyPlaced=/Game/Rocks/rock3/rock3_retop.rock3_retop;
 RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor.MM_Sewer_Floor;
@@ -5310,14 +5335,6 @@ RecentlyPlaced=/Game/BubbleTrash/BubbleTrashRed.BubbleTrashRed;
 RecentlyPlaced=/Game/BubbleTrash/BubbleTrash.BubbleTrash;
 RecentlyPlaced=/Game/Bubbleopolis/NewFolder/Bubble_brick_texture_01_Mat_Inst.Bubble_brick_texture_01_Mat_Inst;
 RecentlyPlaced=/Game/Bridge/meshes/SM_MERGED_Bridge_Middle.SM_MERGED_Bridge_Middle;
-RecentlyPlaced=/Game/Bridge/meshes/SM_MERGED_Bridge_Middle5_5.SM_MERGED_Bridge_Middle5_5;
-RecentlyPlaced=/Game/Bridge/meshes/MergedMeshes/SM_MERGED_Bridge_Middle_23.SM_MERGED_Bridge_Middle_23;
-RecentlyPlaced=/Game/Bridge/meshes/SM_MERGED_Bridge_Middle_23.SM_MERGED_Bridge_Middle_23;
-RecentlyPlaced=/Game/Sewer/AllSewerWater.AllSewerWater;
-RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
-RecentlyPlaced=/Game/MusicBP.MusicBP;
-RecentlyPlaced=/Game/Sewer/gatee.gatee;
-RecentlyPlaced=/Game/SewerLadder/SewerLadder.SewerLadder;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
