--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.000000
+ContentBrowserTab1.ThumbnailSizeScale=0.080357
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -206,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/NewSewer
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -217,29 +217,28 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Sewer/gatee.gatee
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Sewer/gatee
-MRUItem2=/Game/Gates/Gate
-MRUItem3=/Game/Sewer/Lever
-MRUItem4=/Game/Chandelier/Chandelier_Mat
-MRUItem5=/Game/Chandelier/Chandelier
-MRUItem6=/Game/Chest/Treasure_Chest_Mat
-MRUItem7=/Game/Chest/TreasureChest
-MRUItem8=/Game/Shield/Shield1
-MRUItem9=/Game/Shield/Sword_Mat
-MRUItem10=/Game/Shield/Sword
-MRUItem11=/Game/Dresser/Dresser
-MRUItem12=/Game/Dresser/Dresser_PhysicsAsset
-MRUItem13=/Game/BookCase/M_Bookshelf_Top_Pieces
-MRUItem14=/Game/BookCase/Bookcase
-MRUItem15=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water
-MRUItem16=/Game/Levels/Forest
-MRUItem17=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor
-MRUItem18=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
-MRUItem19=/Game/Sewer/Sewer_Level_Sewer_BOTTOM_MESH
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/NewSewer
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Sewer/gatee
+MRUItem4=/Game/Gates/Gate
+MRUItem5=/Game/Sewer/Lever
+MRUItem6=/Game/Chandelier/Chandelier_Mat
+MRUItem7=/Game/Chandelier/Chandelier
+MRUItem8=/Game/Chest/Treasure_Chest_Mat
+MRUItem9=/Game/Chest/TreasureChest
+MRUItem10=/Game/Shield/Shield1
+MRUItem11=/Game/Shield/Sword_Mat
+MRUItem12=/Game/Shield/Sword
+MRUItem13=/Game/Dresser/Dresser
+MRUItem14=/Game/Dresser/Dresser_PhysicsAsset
+MRUItem15=/Game/BookCase/M_Bookshelf_Top_Pieces
+MRUItem16=/Game/BookCase/Bookcase
+MRUItem17=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water
+MRUItem18=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor
+MRUItem19=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2675,6 +2674,7 @@ Gate_C.Collision=True
 Gate_C.Actor=True
 Gate_C.Input=True
 gatee_C.Tick=True
+NewSewer_C.Default=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -2788,7 +2788,7 @@ ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
 MusicBP_C=
-Bubbleopolis_C="\"Object.HUD\" "
+Bubbleopolis_C=
 Fall_Gnome_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 PaperSpriteComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TextRenderComponent="\"Object.Lighting.LightingChannels\" "
@@ -3238,6 +3238,7 @@ None=======
 /Game/Chandelier/Chandelier_Mat.Chandelier_Mat=1
 /Game/Sewer/Lever.Lever=1
 /Game/Gates/Gate.Gate=1
+/Game/Sewer/gatee.gatee=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3322,7 +3323,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4891,9 +4892,9 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/NewSewer
+MRUItem2=/Game/Levels/Forest
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/PersistentLevel
 MRUItem5=/Game/Levels/ForestBackup
