--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -206,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Bubbleopolis
+LastLevel=/Game/Levels/PersistentLevel
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -217,28 +217,29 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/NewSewer
-MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/Sewer/gatee
-MRUItem4=/Game/Gates/Gate
-MRUItem5=/Game/Sewer/Lever
-MRUItem6=/Game/Chandelier/Chandelier_Mat
-MRUItem7=/Game/Chandelier/Chandelier
-MRUItem8=/Game/Chest/Treasure_Chest_Mat
-MRUItem9=/Game/Chest/TreasureChest
-MRUItem10=/Game/Shield/Shield1
-MRUItem11=/Game/Shield/Sword_Mat
-MRUItem12=/Game/Shield/Sword
-MRUItem13=/Game/Dresser/Dresser
-MRUItem14=/Game/Dresser/Dresser_PhysicsAsset
-MRUItem15=/Game/BookCase/M_Bookshelf_Top_Pieces
-MRUItem16=/Game/BookCase/Bookcase
-MRUItem17=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water
-MRUItem18=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor
-MRUItem19=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Levels/NewSewer
+MRUItem3=/Game/Levels/Forest
+MRUItem4=/Game/Sewer/gatee
+MRUItem5=/Game/Gates/Gate
+MRUItem6=/Game/Sewer/Lever
+MRUItem7=/Game/Chandelier/Chandelier_Mat
+MRUItem8=/Game/Chandelier/Chandelier
+MRUItem9=/Game/Chest/Treasure_Chest_Mat
+MRUItem10=/Game/Chest/TreasureChest
+MRUItem11=/Game/Shield/Shield1
+MRUItem12=/Game/Shield/Sword_Mat
+MRUItem13=/Game/Shield/Sword
+MRUItem14=/Game/Dresser/Dresser
+MRUItem15=/Game/Dresser/Dresser_PhysicsAsset
+MRUItem16=/Game/BookCase/M_Bookshelf_Top_Pieces
+MRUItem17=/Game/BookCase/Bookcase
+MRUItem18=/Game/Sewer/Sewer_textures/Sewer_Water/MM_Sewer_Water
+MRUItem19=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2683,9 +2684,9 @@ SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
+Character=
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
+Pawn=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
