--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -206,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/PersistentLevel
+LastLevel=/Game/Levels/NewSewer
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -217,12 +217,12 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Levels/NewSewer.NewSewer:PersistentLevel.NewSewer
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Levels/Bubbleopolis
 MRUItem3=/Game/Levels/Forest
 MRUItem4=/Game/Sewer/gatee
 MRUItem5=/Game/Gates/Gate
@@ -3305,7 +3305,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=310.000 Y=0.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1490.000 Y=854.000
+WindowSize=X=1495.000 Y=859.000
 None=======
 InitiallyMaximized=True
 
@@ -3324,7 +3324,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4893,8 +4893,8 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/Levels/Bubbleopolis
 MRUItem2=/Game/Levels/Forest
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/PersistentLevel
@@ -5313,8 +5313,8 @@ StaircaseBP_C=Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
 DisappearBridge1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 DisappearBridge_C=
 RedPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-gatee_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-NewSewer_C=
+gatee_C=
+NewSewer_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Levers/BaseLever.BaseLever;
